--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,8 +24,9 @@ body {
 .phrase,
 .todo-item,
 .remaining {
-  @include textGradient(white, lightblue);
-  filter: drop-shadow(0px 0px 6px lightblue);
+  color: white;
+  // @include textGradient(white, lightblue);
+  // filter: drop-shadow(0px 0px 6px lightblue);
 }
 .information {
   gap: 24px;
