--- a/src/scss/todoComponent/_todo.scss
+++ b/src/scss/todoComponent/_todo.scss
@@ -20,7 +20,7 @@
     border-radius: 12px;
     overflow: hidden;
     backdrop-filter: blur(12px);
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     border: 2px solid rgba(255, 255, 255, 0.2);
     transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
     &.hidden {
@@ -32,7 +32,7 @@
       z-index: 5;
       width: 100%;
       padding: 12px;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.2);
       border-bottom: 2px solid rgba(255, 255, 255, 0.2);
       .wrapper {
         display: flex;
